	a double-free.

	* readconfig.c, ser2net.8: Rework the input handling so an IPV6
	can be specified as part of the portnum parameter.  This was hard
	because IPV6 addresses have ':' in them.  Basically, if there is a
	"," in the port specification, assume that everything from the
	beginning of the line to the ':' after the ',' is the port number.

2013-08-07  Corey Minyard <minyard@acm.org>

	* utils.c, controller.c, dataxfer.c: Return an errno from
	scan_tcp_port() so it can return an out of memory error.

	* controller.c, controller.h, ser2net.c: Add an out of memory
	return code from controller_init().

2013-07-31 Longshine <longxianghe@gmail.com>

	* utils.c: Copy input string to a temporary buffer before
	calling strtok_r in scan_tcp_port.

2013-07-28  Corey Minyard <minyard@acm.org>

	* configure.ac: Move to version 2.9.1.  There was an issue with
	the configure setup.  So autoreconf and redistribute.

2013-07-26  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Fix a bug in format strings where hex element (\x)
	would have the wrong values for a-f.  Pointed out by Galen Seitz.

2013-07-26  Corey Minyard <minyard@acm.org>

	* configure.ac: Version 2.9.

2013-07-25  Yegor Yefremov <yegorslists@googlemail.com>

	* Make RFC2217 signature configurable:
	Add '-s' option to configure default signature, that can be
	requested via RFC2217 protocol (option 0).
	Add per port signature via SIGNATURE keyword.

2013-06-29  Yegor Yefremov <yegorslists@googlemail.com>

	* dataxfer.c: The baudrate, that will be sent to the client,
	was converted twice: first with htonl() and then via copying
	to the buffer. As result 38400 was transfered as 6500960000
	instead of 6500009600.

2013-05-07  Corey Minyard <minyard@acm.org>

	* buffer.c: Add a buffer wrap that was missed, identified by
	Brian Rzycki.

2013-03-01  Corey Minyard <minyard@acm.org>

	* Makefile.am: Added 'ACLOCAL_AMFLAGS = -I m4' as suggested by
	libtoolize.

	* configure.in -> configure.ac
